--- a/package.json
+++ b/package.json
@@ -14,6 +14,16 @@
     "mkdirp": "~0.3.5",
     "rimraf": "~2.1.4",
     "lexical-scope": "0.0.6",
-    "falafel": "~0.2.0"
+    "falafel": "~0.2.0",
+    "uglify-js": "~2.4.0",
+    "testit": "~1.1.0",
+    "astw": "0.0.0"
+  },
+  "dependencies": {
+    "diff-match-patch": "~1.0.0",
+    "csslint": "~0.9.10",
+    "jshint": "~2.1.11",
+    "jsonlint": "~1.6.0",
+    "coffeelint": "~0.5.7"
   }
 }
