--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "code-mirror",
-  "version": "3.19.0-1",
+  "version": "3.20.0",
   "description": "CodeMirror fork to be more \"browserifyable\"",
   "main": "./codemirror",
   "repository": {
